k8s-deployments/clickhouse/svc-external.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: clickhouse
    app.kubernetes.io/instance: clickhouse
    app.kubernetes.io/name: clickhouse
    app.kubernetes.io/part-of: clickhouse
  name: clickhouse-external
  namespace: clickhouse
spec:
  allocateLoadBalancerNodePorts: false
  clusterIP: ""
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8123
      protocol: TCP
      targetPort: http
    - name: tcp
      port: 9000
      protocol: TCP
      targetPort: tcp
  selector:
    app.kubernetes.io/component: clickhouse
    app.kubernetes.io/instance: clickhouse
    app.kubernetes.io/name: clickhouse
    app.kubernetes.io/part-of: clickhouse
  sessionAffinity: None
  type: LoadBalancer
  externalIPs:
    - 10.10.3.251
    - 10.10.3.252
    - 10.10.3.253
