k8s-deployments/clickhouse/full-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: clickhouse-server
  namespace: clickhouse
  labels:
    app.kubernetes.io/component: clickhouse
    app.kubernetes.io/instance: clickhouse
    app.kubernetes.io/name: clickhouse
spec:
  replicas: 1
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
    whenScaled: Retain
  selector:
    matchLabels:
      app.kubernetes.io/component: clickhouse
      app.kubernetes.io/instance: clickhouse
      app.kubernetes.io/name: clickhouse
  serviceName: clickhouse
  template:
    metadata:
      labels:
        app.kubernetes.io/component: clickhouse
        app.kubernetes.io/instance: clickhouse
        app.kubernetes.io/name: clickhouse
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: ch-server
          image: clickhouse/clickhouse-server:25.8.12-alpine
          ports:
            - containerPort: 8123
              name: http
            - containerPort: 9000
              name: tcp
            #            - containerPort: 9004
            #              name: mysql
            - containerPort: 9005
              name: postgresql
          volumeMounts:
            - name: data
              mountPath: /var/lib/clickhouse
            - name: log
              mountPath: /var/log/clickhouse-server
            - name: config-volume
              mountPath: /etc/clickhouse-server/config.d/
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1
              memory: 1Gi
      volumes:
        - name: config-volume
          configMap:
            name: clickhouse-config
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 8Gi
    - metadata:
        name: log
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: clickhouse
    app.kubernetes.io/name: clickhouse
  name: clickhouse
  namespace: clickhouse
spec:
  allocateLoadBalancerNodePorts: false
  ports:
    - name: http
      port: 8123
      protocol: TCP
      targetPort: http
    - name: tcp
      port: 9000
      protocol: TCP
      targetPort: tcp
    #    - name: mysql
    #      port: 9004
    #      protocol: TCP
    #      targetPort: mysql
    - name: postgresql
      port: 9005
      protocol: TCP
      targetPort: postgresql
  selector:
    app.kubernetes.io/component: clickhouse
    app.kubernetes.io/instance: clickhouse
    app.kubernetes.io/name: clickhouse
  type: LoadBalancer
  externalIPs:
    - 10.10.3.251
    - 10.10.3.252
    - 10.10.3.253
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clickhouse-http
  namespace: clickhouse
spec:
  ingressClassName: nginx
  #  tls:
  #    - hosts:
  #        - minio-console.ibrahim.net
  #      secretName: gke-tls-secret
  rules:
    - host: clickhouse.ibrahim.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clickhouse
                port:
                  number: 8123
